[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "news-volume-mcp"
version = "1.0.0"
description = "News mention volume as an MCP tool. Plug into Claude, Cursor, or any MCP-compatible AI host. Weekly series, growth percentages, and live Google News feed. Powered by trendsmcp.ai"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [{ name = "Trends MCP", email = "hello@trendsmcp.ai" }]
keywords = [
  "news-volume",
  "news-mcp",
  "mcp",
  "model-context-protocol",
  "media-monitoring",
  "ai-tools",
  "claude",
  "cursor",
  "journalism",
  "trendsmcp"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["trendsmcp>=1.0.0"]

[project.urls]
Homepage = "https://trendsmcp.ai"
Documentation = "https://trendsmcp.ai/docs"
Repository = "https://github.com/trendsmcp/news-volume-mcp"
"Get API Key" = "https://trendsmcp.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/news_volume_mcp"]


